[workspace]
members = [
    "crates/bounce",
    "crates/bounce-macros",

    "examples/notion",
    "examples/simple",
    "examples/partial-render",
    "examples/random-uuid",
    "examples/divisibility",
    "examples/divisibility-input",
    "examples/queries-mutations",
    "examples/title",
]
resolver = "2"
