[workspace]
members = [
    "crates/bounce",
    "crates/bounce-macros",

    "examples/notion",
    "examples/simple",
    "examples/partial-render",
    "examples/random-uuid",
    "examples/divisibility",
    "examples/divisibility-input",
    "examples/queries-mutations",
    "examples/title",
    "examples/helmet-title",
    "examples/persist",
]
resolver = "2"
