[workspace]
members = [
    "crates/bounce",
    "crates/bounce-macros",

    "examples/notion",
    "examples/simple",
    "examples/partial-render",
    "examples/random-uuid",
    "examples/divisibility",
    "examples/divisibility-input",
    "examples/queries-mutations",
    "examples/queries-ssr",
    "examples/title",
    "examples/helmet-title",
    "examples/helmet-ssr",
    "examples/persist",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
