[package]
name = "bounce-macros"
version = "0.9.0"
edition = "2021"
repository = "https://github.com/bounce-rs/bounce"
authors = ["Kaede Hoshiakwa <futursolo@icloud.com>"]
description = "The uncomplicated state management library for Yew."
keywords = ["web", "wasm", "yew", "state-management"]
categories = ["wasm", "web-programming"]
readme = "README.md"
homepage = "https://github.com/bounce-rs/bounce"
license = "MIT OR Apache-2.0"
rust-version = "1.64"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.22", features = ["full", "extra-traits"] }
