[package]
name = "bounce"
version = "0.6.1"
edition = "2021"
repository = "https://github.com/bounce-rs/bounce"
authors = [
    "Kaede Hoshiakwa <futursolo@icloud.com>",
]
description = "The uncomplicated state management library for Yew."
keywords = ["web", "wasm", "yew", "state-management"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"
homepage = "https://github.com/bounce-rs/bounce"
license = "MIT OR Apache-2.0"
rust-version = "1.60.0"

[dependencies]
anymap2 = "0.13.0"
once_cell = "1.17.1"
wasm-bindgen = "0.2.84"
yew = "0.20"
bounce-macros = { path = "../bounce-macros", version = "0.6.1" }
futures = "0.3.28"

async-trait = { version = "0.1.68", optional = true }
gloo = { version = "0.8.0", features = ["futures"], optional = true }
html-escape = { version = "0.2.13", optional = true }
serde = { version = "1.0.159", features = ["derive"] }
tracing = "0.1"

[dependencies.web-sys]
version = "0.3.61"
optional = true
features = [
    "Document",
    "HtmlScriptElement",
    "HtmlStyleElement",
    "DomTokenList",
    "HtmlLinkElement",
    "HtmlMetaElement",
    "HtmlBaseElement",
    "NodeList",
]

[features]
ssr = ["html-escape"]
query = ["async-trait"]
helmet = ["gloo", "web-sys"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
gloo = { version = "0.8.0", features = ["futures"] }
yew = { version = "0.20", features = ["csr", "ssr"] }
thiserror = "1"

[dev-dependencies.web-sys]
version = "0.3.61"
features = [
    "HtmlInputElement",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
