[package]
name = "bounce"
version = "0.9.0"
edition = "2021"
repository = "https://github.com/bounce-rs/bounce"
authors = ["Kaede Hoshiakwa <futursolo@icloud.com>"]
description = "The uncomplicated state management library for Yew."
keywords = ["web", "wasm", "yew", "state-management"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"
homepage = "https://github.com/bounce-rs/bounce"
license = "MIT OR Apache-2.0"
rust-version = "1.84.0"

[dependencies]
anymap2 = "0.13.0"
once_cell = "1.18.0"
wasm-bindgen = "0.2.87"
yew = "0.22"
bounce-macros = { path = "../bounce-macros", version = "0.9.0" }
futures = "0.3.28"

gloo = { version = "0.11.0", features = ["futures"], optional = true }
html-escape = { version = "0.2.13", optional = true }
serde = { version = "1.0.164", features = ["derive"] }
tracing = "0.1"

[dependencies.web-sys]
version = "0.3.64"
optional = true
features = [
    "Document",
    "HtmlScriptElement",
    "HtmlStyleElement",
    "DomTokenList",
    "HtmlLinkElement",
    "HtmlMetaElement",
    "HtmlBaseElement",
    "NodeList",
]

[features]
ssr = ["html-escape"]
query = []
helmet = ["gloo", "web-sys"]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
gloo = { version = "0.11.0", features = ["futures"] }
yew = { version = "0.22", features = ["csr", "ssr"] }
thiserror = "1"

[dev-dependencies.web-sys]
version = "0.3.64"
features = ["HtmlInputElement"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(documenting)', 'cfg(releasing)'] }