[package]
name = "bounce-e2e-query-app"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
yew = { version = "0.22", features = ["csr"] }
bounce = { path = "../../crates/bounce", features = ["query"] }
async-trait = "0.1"
gloo-net = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Performance",
    "PerformanceEntry",
    "PerformanceResourceTiming",
] }
wasm-bindgen = "0.2"
