[package]
name = "divisibility-input"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { path = "../../crates/bounce" }
yew = { version = "0.20", features = ["csr"] }
stylist = { version = "0.11.0", features = ["yew"] }
log = "0.4.17"
console_log = { version = "0.2.0", features = ["color"] }
wasm-bindgen = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
gloo = { version = "0.8.0", features = ["futures"] }
web-sys = "0.3.60"
