[package]
name = "divisibility"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { path = "../../crates/bounce" }
yew = { version = "0.21", features = ["csr"] }
stylist = { version = "0.13", features = ["yew"] }
log = "0.4.19"
console_log = { version = "1.0.0", features = ["color"] }
wasm-bindgen = "0.2.87"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
gloo = { version = "0.11.0", features = ["futures"] }
web-sys = "0.3.64"
