[package]
name = "helmet-ssr"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "helmet-ssr-client"
required-features = ["csr"]

[[bin]]
name = "helmet-ssr-server"
required-features = ["ssr"]

[dependencies]
bounce = { path = "../../crates/bounce", features = ["helmet"] }
yew = { version = "0.20" }
log = "0.4.17"
console_log = { version = "0.2.0", features = ["color"] }
wasm-bindgen = "0.2.80"
yew-router = "0.17"
gloo = { version = "0.8.0", features = ["futures"] }
web-sys= "0.3.57"
bytes = "1.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.15.0", features = ["full"] }
env_logger = "0.10"
clap = { version = "3.1.7", features = ["derive"] }
warp = "0.3"
futures = "0.3"
html_parser = "0.6.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[features]
csr = ["yew/csr", "yew/hydration"]
ssr = ["yew/ssr", "bounce/ssr"]
