[package]
name = "helmet-ssr"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "helmet-ssr-client"
required-features = ["csr"]

[[bin]]
name = "helmet-ssr-server"
required-features = ["ssr"]

[dependencies]
bounce = { path = "../../crates/bounce", features = ["helmet"] }
yew = { version = "0.20" }
log = "0.4.19"
console_log = { version = "1.0.0", features = ["color"] }
wasm-bindgen = "0.2.87"
yew-router = "0.17"
gloo = { version = "0.9.0", features = ["futures"] }
web-sys= "0.3.64"
bytes = "1.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.29.1", features = ["full"] }
env_logger = "0.10"
clap = { version = "4.3.10", features = ["derive"] }
warp = "0.3"
futures = "0.3"
html_parser = "0.7.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[features]
csr = ["yew/csr", "yew/hydration"]
ssr = ["yew/ssr", "bounce/ssr"]
