[package]
name = "helmet-title"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { path = "../../crates/bounce", features = ["helmet"] }
yew = { version = "0.20", features = ["csr"] }
log = "0.4.17"
console_log = { version = "1.0.0", features = ["color"] }
wasm-bindgen = "0.2.84"
yew-router = "0.17"
gloo = { version = "0.8.0", features = ["futures"] }
web-sys= "0.3.61"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
