[package]
name = "helmet-title"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { path = "../../crates/bounce", features = ["helmet"] }
yew = { version = "0.20", features = ["csr"] }
log = "0.4.19"
console_log = { version = "1.0.0", features = ["color"] }
wasm-bindgen = "0.2.87"
yew-router = "0.18"
gloo = { version = "0.9.0", features = ["futures"] }
web-sys= "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
