[package]
name = "partial-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { path = "../../packages/bounce" }
yew = { git = "https://github.com/yewstack/yew" }
stylist = { git = "https://github.com/futursolo/stylist-rs", features = ["yew_integration"] }
log = "0.4.14"
console_log = { version = "0.2.0", features = ["color"] }
