[package]
name = "persist"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { path = "../../crates/bounce" }
yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
log = "0.4.17"
console_log = { version = "0.2.0", features = ["color"] }
wasm-bindgen = "0.2.80"
gloo = { version = "0.8.0", features = ["futures"] }

[dependencies.web-sys]
version = "0.3.57"
features = [
    "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.30"
