[package]
name = "queries-mutations"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { path = "../../crates/bounce", features = ["query"] }
yew = { version = "0.20", features = ["csr"] }
log = "0.4.17"
console_log = { version = "0.2.0", features = ["color"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.148", features = ["derive"] }
uuid = { version = "1.2.2", features = ["serde"] }
async-trait = "0.1.59"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
gloo = { version = "0.8.0", features = ["futures"] }
