[package]
name = "queries-mutations"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { path = "../../crates/bounce", features = ["query"] }
yew = { version = "0.21", features = ["csr"] }
log = "0.4.19"
console_log = { version = "1.0.0", features = ["color"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.4.0", features = ["serde"] }
async-trait = "0.1.68"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
gloo = { version = "0.9.0", features = ["futures"] }
