[package]
name = "queries-ssr"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "queries-ssr-client"
required-features = ["csr"]

[[bin]]
name = "queries-ssr-server"
required-features = ["ssr"]

[dependencies]
bounce = { path = "../../crates/bounce", features = ["query"] }
yew = { version = "0.21" }
log = "0.4.19"
console_log = { version = "1.0.0", features = ["color"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.4.0", features = ["serde"] }
async-trait = "0.1.68"
wasm-bindgen = "0.2.87"
thiserror = "1.0.40"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "HtmlInputElement",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.29.1", features = ["full"] }
env_logger = "0.10"
clap = { version = "4.3.10", features = ["derive"] }
warp = "0.3"
futures = "0.3"
html_parser = "0.7.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
gloo = { version = "0.10.0", features = ["futures"] }

[features]
csr = ["yew/csr", "yew/hydration"]
ssr = ["yew/ssr", "bounce/ssr"]
