[package]
name = "random-uuid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = { path = "../../crates/bounce" }
yew = "0.19.3"
log = "0.4.14"
console_log = { version = "0.2.0", features = ["color"] }
reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.55"
features = [
    "HtmlInputElement",
]
